--- a/src/index.css
+++ b/src/index.css
@@ -41,12 +41,12 @@ code {
   align-self: flex-start;
 }
 
-.error-dailog {
+.error-dialog {
   color: #721c24;
   background-color: #f8d7da;
   border-color: #f5c6cb;
 }
-.success-dailog {
+.success-dialog {
   color: #155724;
   background-color: #d4edda;
   border-color: #c3e6cb;
@@ -407,6 +407,10 @@ nav .nav-links ul li:hover {
 }
 .field button:hover {
   cursor: pointer;
+}
+
+.field button:disabled {
+  cursor: not-allowed;
 }
 
 /* SETTINGS and USERPROFILE */
